change the name of links according to index.html file

--- a/skills.html
+++ b/skills.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="projects.html">Project</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -44,7 +44,7 @@ I specialize in building full-stack web applications and deploying AI-powered so
     </div>
      <footer>
         <ul>
-        <li><a href="home.css">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="skills.html">Skills</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li></ul>
