--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="name"><h2>Talal Azhar</h2></div>
         <nav><ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="skills.html">Skills</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li></ul></nav>
@@ -25,7 +25,7 @@
     </div>
     <footer>
         <ul>
-        <li><a href="home.css">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="skills.html">Skills</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li></ul>
