--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -31,7 +31,7 @@
     </section>
     <footer>
          <ul>
-        <li><a href="home.css">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="skills.html">Skills</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li></ul>
